[package]
name = "ant"
version = "0.0.1"
edition = "2024"
description = "Ergonomic job scheduling library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vkhinvasara/ant"
keywords = ["scheduler", "jobs", "cron", "task"]
categories = ["concurrency", "asynchronous"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["clock"] }
humantime = "2.2.0"
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v4"] }
cron = "0.12"
